test/classes/initializers/errors/badThisType.chpl
proc R.init() {
}

proc R2.init() {
}

var r = new R();
var r2 = new R2();

