test/classes/initializers/errors/badThisType.good
badThisType.chpl:1: error: initializer defined on unrecognized type: 'R'
